--- a/loading.html
+++ b/loading.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="loading.css">
     <title>Loading</title>
 </head>
 <body>
+    <script src="loading.js"></script>
     <section class="bg"></section>
     <div class="loading-text">0%</div>
 </body>
