Wed, Feb 25, 2026, 9:08 AM -08:00

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Home Page</title>
 </head>
 <body>
-    this is my home page
+    This is my homepage
+    <a href="search.html">Want to search?</a>
+    <a href="loading.html">Witness this amazing view!</a>
 </body>
 </html>
