Fri, Feb 27, 2026, 9:43 AM -08:00

--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
     This is my homepage
     <a href="search.html">Want to search?</a>
     <a href="loading.html">Witness this amazing view!</a>
+    <a href="copy.html">copyPage</a>
+    <a href="expanding.html"></a>
 </body>
 </html>
