--- a/expanding.html
+++ b/expanding.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Expanding</title>
+    <link rel="stylesheet" href="expandingPage/expanding.css">
 </head>
 <body>
-    
+
+    <script src="expandingPage/expanding.js"></script>
 </body>
 </html>
