Fri, Feb 27, 2026, 9:47 AM -08:00

--- a/expanding.html
+++ b/expanding.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="expandingPage/expanding.css">
 </head>
 <body>
+    <section class=" container flex row">
+    </section>
 
     <script src="expandingPage/expanding.js"></script>
 </body>
