Fri, Feb 27, 2026, 9:52 AM -08:00

--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     <a href="search.html">Want to search?</a>
     <a href="loading.html">Witness this amazing view!</a>
     <a href="copy.html">copyPage</a>
-    <a href="expanding.html"></a>
+    <a href="expanding.html">expnding</a>
 </body>
 </html>
