--- a/expanding.html
+++ b/expanding.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <section class=" container flex row">
+        <img src="images/sunset.avif" alt="beach with sunset">
+        <img src="images/rollingiWaves.avif" alt="rolling waves on a beach">
+        <img src="iamges/lonePalmTree.avif" alt="Lone palm tree on beach shore">
     </section>
 
     <script src="expandingPage/expanding.js"></script>
