Fri, Feb 27, 2026, 9:54 AM -08:00

--- a/expanding.html
+++ b/expanding.html
@@ -9,8 +9,9 @@
 <body>
     <section class=" container flex row">
         <img src="images/sunset.avif" alt="beach with sunset">
-        <img src="images/rollingiWaves.avif" alt="rolling waves on a beach">
-        <img src="iamges/lonePalmTree.avif" alt="Lone palm tree on beach shore">
+        <img src="images/rollingWaves.avif" alt="rolling waves on a beach">
+        <img src="images/lonePalmTree.avif" alt="Lone palm tree on beach shore">
+        <img src="images" alt="">
     </section>
 
     <script src="expandingPage/expanding.js"></script>
