--- a/expanding.html
+++ b/expanding.html
@@ -7,11 +7,22 @@
     <link rel="stylesheet" href="expandingPage/expanding.css">
 </head>
 <body>
-    <section class=" container flex row">
-        <img src="images/sunset.avif" alt="beach with sunset">
-        <img src="images/rollingWaves.avif" alt="rolling waves on a beach">
-        <img src="images/lonePalmTree.avif" alt="Lone palm tree on beach shore">
-        <img src="images" alt="">
+    <section class="container flex row">
+        <div class="panel flex" style="background-image: url(images/sunset.avif)">
+            <h3>witerally checking</h3>
+        </div>
+        <div class="panel flex" style="background-image: url(images/rollingWaves.avif)">
+            <h3>witerally checking</h3>
+        </div>
+        <div class="panel flex" style="background-image: url(images/lonePalmTree.avif)">
+            <h3>witerally checking</h3>
+        </div>
+        <div class="panel flex" style="background-image: url(images/island.avif)">
+            <h3>witerally checking</h3>
+        </div>
+        <div class="panel flex" style="background-image: url(images/island2.avif)">
+            <h3>witerally checking</h3>
+        </div>
     </section>
 
     <script src="expandingPage/expanding.js"></script>
