--- a/expanding.html
+++ b/expanding.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="container flex row">
-        <div class="panel flex" style="background-image: url(images/sunset.avif)">
+        <div class="panel flex selected" style="background-image: url(images/sunset.avif)">
             <h3>witerally checking</h3>
         </div>
         <div class="panel flex" style="background-image: url(images/rollingWaves.avif)">
