--- a/expanding.html
+++ b/expanding.html
@@ -11,16 +11,16 @@
         <div class="panel flex selected" style="background-image: url(images/sunset.avif)">
             <h3>witerally checking</h3>
         </div>
-        <div class="panel flex" style="background-image: url(images/rollingWaves.avif)">
+        <div class="panel flex unselected" style="background-image: url(images/rollingWaves.avif)">
             <h3>witerally checking</h3>
         </div>
-        <div class="panel flex" style="background-image: url(images/lonePalmTree.avif)">
+        <div class="panel flex unselected" style="background-image: url(images/lonePalmTree.avif)">
             <h3>witerally checking</h3>
         </div>
-        <div class="panel flex" style="background-image: url(images/island.avif)">
+        <div class="panel flex unselected" style="background-image: url(images/island.avif)">
             <h3>witerally checking</h3>
         </div>
-        <div class="panel flex" style="background-image: url(images/island2.avif)">
+        <div class="panel flex unselected" style="background-image: url(images/island2.avif)">
             <h3>witerally checking</h3>
         </div>
     </section>
